--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     background-color: #1e1e1e;
     color: #fff;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Poppins', sans-serif;
   }
   
   .photobooth {
